Update docs, make license opt-in more explicit

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+ACCEPT_LICENSE="false"
+
 SNOWFLAKE_URL="https://account.region.snowflakecomputing.com"
 SNOWFLAKE_USERNAME="yausername"
 SNOWFLAKE_PRIVATE_KEY="excusemethisisprivate!"
